--- a/VRChat/39/1148939.html
+++ b/VRChat/39/1148939.html
@@ -543,6 +543,28 @@
                             <a class="search-guide-tablet"
                             data-tracking="click"
                             data-product-list="from market_show via tag_list to search_index"
+                            href=
+                            "https://booth.pm/ja/search/%E3%82%AA%E3%83%AA%E3%82%B8%E3%83%8A%E3%83%AB">
+                            <div class="search-guide-tablet-label">
+                              <div class=
+                              "search-guide-tablet-label-inner">
+                                オリジナル
+                              </div>
+                            </div></a><a class=
+                            "search-guide-tablet" data-tracking=
+                            "click" data-product-list=
+                            "from market_show via tag_list to search_index"
+                            href=
+                            "https://booth.pm/ja/search/%E3%82%A2%E3%83%90%E3%82%BF%E3%83%BC">
+                            <div class="search-guide-tablet-label">
+                              <div class=
+                              "search-guide-tablet-label-inner">
+                                アバター
+                              </div>
+                            </div></a><a class=
+                            "search-guide-tablet" data-tracking=
+                            "click" data-product-list=
+                            "from market_show via tag_list to search_index"
                             href="https://booth.pm/ja/search/FBX">
                             <div class="search-guide-tablet-label">
                               <div class=
@@ -575,11 +597,33 @@
                             "click" data-product-list=
                             "from market_show via tag_list to search_index"
                             href=
+                            "https://booth.pm/ja/search/VRC%E5%8F%AF">
+                            <div class="search-guide-tablet-label">
+                              <div class=
+                              "search-guide-tablet-label-inner">
+                                VRC可
+                              </div>
+                            </div></a><a class=
+                            "search-guide-tablet" data-tracking=
+                            "click" data-product-list=
+                            "from market_show via tag_list to search_index"
+                            href=
                             "https://booth.pm/ja/search/%E3%83%90%E3%83%BC%E3%83%81%E3%83%A3%E3%83%AB%E3%82%AD%E3%83%A3%E3%82%B9%E3%83%88">
                             <div class="search-guide-tablet-label">
                               <div class=
                               "search-guide-tablet-label-inner">
                                 バーチャルキャスト
+                              </div>
+                            </div></a><a class=
+                            "search-guide-tablet" data-tracking=
+                            "click" data-product-list=
+                            "from market_show via tag_list to search_index"
+                            href=
+                            "https://booth.pm/ja/search/VRC%E6%83%B3%E5%AE%9A">
+                            <div class="search-guide-tablet-label">
+                              <div class=
+                              "search-guide-tablet-label-inner">
+                                VRC想定
                               </div>
                             </div></a><a class=
                             "search-guide-tablet" data-tracking=
@@ -626,9 +670,9 @@
                         "click" data-product-list=
                         "from market_show via tag_category_search to search_index"
                         href=
-                        "https://booth.pm/ja/browse/3D%E3%83%A2%E3%83%87%E3%83%AB?q=FBX">
+                        "https://booth.pm/ja/browse/3D%E3%83%A2%E3%83%87%E3%83%AB?q=%E3%82%AA%E3%83%AA%E3%82%B8%E3%83%8A%E3%83%AB">
                         <div class="search-label">
-                          FBX x 3Dモデル で検索
+                          オリジナル x 3Dモデル で検索
                         </div></a>
                       </div>
                     </div>
