--- a/VRChat/46/1219646.html
+++ b/VRChat/46/1219646.html
@@ -6,7 +6,7 @@
       DT_Tank_Machinegun (FBXファイル) △8432 - 柚木零の店 - BOOTH
     </title>
     <meta name="description" content=
-    "この商品はDT車載機関銃をモデリングしたものです。 ポリゴン数削減のため、細かい部分は再現されていません。ご了承ください。 △8432ポリゴン、テクスチャ同梱。 ●内容物 ・fbxファイル『DTTankGun_ver0.1.fbx』 ・テクスチャ三枚（Albedo、ノーマルマップ、スペキュラー） またこれらのデータはzip形式で圧縮してあります。 　＜利用規約＞ ・本モデルを使用したことによって生じるいかなる損害に対して等方は一切責任を負いません。 また、条件についての内容は予告なく変更する場合があります。 ・非改変での再配布、再販売、自作発言等は禁止です。">
+    "この商品はDT車載機関銃をモデリングしたものです。 ポリゴン数削減のため、細かい部分は再現されていません。ご了承ください。 2021年12月 追記 商品画像の変更、ボーン付属のFBXを追加しました。 △8432ポリゴン、テクスチャ同梱。 ●内容物 ・fbxファイル『DTTankGun_ver0.1.fbx』 ・fbxファイル『DTtankGun_Bone_ver01.fbx』 ・テクスチャ三枚（Albedo、ノーマルマップ、スペキュラー） ・利用規約 またこれらのデータはzip形式で圧縮してあります。 　＜利用規約＞">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1219646">
@@ -15,16 +15,16 @@
     <meta name="twitter:title" content=
     "DT_Tank_Machinegun (FBXファイル) △8432 - 柚木零の店 - BOOTH">
     <meta name="twitter:description" content=
-    "この商品はDT車載機関銃をモデリングしたものです。 ポリゴン数削減のため、細かい部分は再現されていません。ご了承ください。 △8432ポリゴン、テクスチャ同梱。 ●内容物 ・fbxファイル『DTTankGun_ver0.1.fbx』 ・テクスチャ三枚（Albedo、ノーマルマップ、スペキュラー） またこれらのデータはzip形式で圧縮してあります。 　＜利用規約＞ ・本モデルを使用したことによって生じるいかなる損害に対して等方は一切責任を負いません。 また、条件についての内容は予告なく変更する場合があります。 ・非改変での再配布、再販売、自作発言等は禁止です。">
+    "この商品はDT車載機関銃をモデリングしたものです。 ポリゴン数削減のため、細かい部分は再現されていません。ご了承ください。 2021年12月 追記 商品画像の変更、ボーン付属のFBXを追加しました。 △8432ポリゴン、テクスチャ同梱。 ●内容物 ・fbxファイル『DTTankGun_ver0.1.fbx』 ・fbxファイル『DTtankGun_Bone_ver01.fbx』 ・テクスチャ三枚（Albedo、ノーマルマップ、スペキュラー） ・利用規約 またこれらのデータはzip形式で圧縮してあります。 　＜利用規約＞">
     <meta name="twitter:image" content=
-    "https://booth.pximg.net/c/620x620/8f9f026a-3963-4972-9b28-0d458c4521ab/i/1219646/d97541c1-e53b-415a-b2ba-1e24f26fbb3d_base_resized.jpg">
+    "https://booth.pximg.net/c/620x620/8f9f026a-3963-4972-9b28-0d458c4521ab/i/1219646/9f6677de-5a18-423b-8352-bdcc5e8dea6e_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "DT_Tank_Machinegun (FBXファイル) △8432 - 柚木零の店 - BOOTH">
     <meta property="og:description" content=
-    "この商品はDT車載機関銃をモデリングしたものです。 ポリゴン数削減のため、細かい部分は再現されていません。ご了承ください。 △8432ポリゴン、テクスチャ同梱。 ●内容物 ・fbxファイル『DTTankGun_ver0.1.fbx』 ・テクスチャ三枚（Albedo、ノーマルマップ、スペキュラー） またこれらのデータはzip形式で圧縮してあります。 　＜利用規約＞ ・本モデルを使用したことによって生じるいかなる損害に対して等方は一切責任を負いません。 また、条件についての内容は予告なく変更する場合があります。 ・非改変での再配布、再販売、自作発言等は禁止です。">
+    "この商品はDT車載機関銃をモデリングしたものです。 ポリゴン数削減のため、細かい部分は再現されていません。ご了承ください。 2021年12月 追記 商品画像の変更、ボーン付属のFBXを追加しました。 △8432ポリゴン、テクスチャ同梱。 ●内容物 ・fbxファイル『DTTankGun_ver0.1.fbx』 ・fbxファイル『DTtankGun_Bone_ver01.fbx』 ・テクスチャ三枚（Albedo、ノーマルマップ、スペキュラー） ・利用規約 またこれらのデータはzip形式で圧縮してあります。 　＜利用規約＞">
     <meta property="og:image" content=
-    "https://booth.pximg.net/c/620x620/8f9f026a-3963-4972-9b28-0d458c4521ab/i/1219646/d97541c1-e53b-415a-b2ba-1e24f26fbb3d_base_resized.jpg">
+    "https://booth.pximg.net/c/620x620/8f9f026a-3963-4972-9b28-0d458c4521ab/i/1219646/9f6677de-5a18-423b-8352-bdcc5e8dea6e_base_resized.jpg">
     <meta property="og:url" content=
     "https://booth.pm/ja/items/1219646">
     <meta name="ga:shop" content="">
@@ -61,7 +61,7 @@
     <script src=
     "https://asset.booth.pm/assets/642489fdaa712cea9e91.js" defer=
     "defer" nonce=
-    "N0KSTLC4BpR/fyNgq9+PIETds6EOgRNnQowJb3MUW2k="></script>
+    "8+xm/fiVEyN/L0+NG2O2nccCuDv/SOXTnKxh+BGMgt0="></script>
     <script id="shop_with_items" type="text/x-template">
     <div class="shop-card l-card" v-if="shop"><div class="shop-card__box-wrap"><div class="shop-card__box"><div class="shop-card-box-body"><a :href="shop.base_url" @click="sendAnalyticsEvent(&quot;shop_index&quot;, &quot;click&quot;)" target="_blank"><div class="shop-card__thumbnails"><div class="shop-card__thumbnails--at-left on-white-bg"><img :alt="largeThumbItem.name" :data-original="hideThumbnail(largeThumbItem) ? &quot;https://asset.booth.pm/assets/thumbnail-alert-312-ede42745738fe1172fe21985c735ae1acab66f179bca53964b73af31cd0e07e3.png&quot; : largeThumbItem.image_url" class="lazyload u-w-100" /></div><div class="shop-card__thumbnails--at-right"><div class="shop-card__thumbnail-wrap on-white-bg" v-for="item in smallThumbItems"><div class="shop-card__thumbnail"><img :alt="item.name" :data-original="hideThumbnail(item) ? &quot;https://asset.booth.pm/assets/thumbnail-alert-312-ede42745738fe1172fe21985c735ae1acab66f179bca53964b73af31cd0e07e3.png&quot; : item.image_url" class="lazyload u-w-100" /></div></div></div></div></a></div><div class="shop-card__box-footer"><div class="shop-card__owner-info"><div class="shop-card__avatar"><a :href="shop.base_url" @click="sendAnalyticsEvent(&quot;shop_index&quot;, &quot;click&quot;)" target="_blank"><img :alt="shop.user.nickname" :data-original="shop.user.thumbnail_url" class="lazyload user_avatar-48 mobile-user_avatar-38" height="42" width="42" /></a></div><div class="shop-card__shop-name"><a :href="shop.base_url" @click="sendAnalyticsEvent(&quot;shop_index&quot;, &quot;click&quot;)" class="text-ui" target="_blank">{{ shop.name }}</a></div></div><div class="shop-card__actions"><follow-btn :ga-params="gaParams" :shop="shop"></follow-btn></div></div></div></div></div>
     </script>
@@ -74,9 +74,9 @@
     <script src=
     "https://asset.booth.pm/assets/7ad3c0d6db4a567bcc38.js" defer=
     "defer" nonce=
-    "N0KSTLC4BpR/fyNgq9+PIETds6EOgRNnQowJb3MUW2k="></script>
+    "8+xm/fiVEyN/L0+NG2O2nccCuDv/SOXTnKxh+BGMgt0="></script>
     <script type="application/ld+json">
-    {"@context":"https://schema.org","@type":"Product","name":"DT_Tank_Machinegun (FBXファイル) △8432","description":"この商品はDT車載機関銃をモデリングしたものです。\nポリゴン数削減のため、細かい部分は再現されていません。ご了承ください。\n\n△8432ポリゴン、テクスチャ同梱。\n\n●内容物\n\n・fbxファイル『DTTankGun_ver0.1.fbx』\n・テクスチャ三枚（Albedo、ノーマルマップ、スペキュラー）\n\nまたこれらのデータはzip形式で圧縮してあります。\n\n　＜利用規約＞ \n・本モデルを使用したことによって生じるいかなる損害に対して等方は一切責任を負いません。 また、条件についての内容は予告なく変更する場合があります。 \n\n・非改変での再配布、再販売、自作発言等は禁止です。 テクスチャ改変、モデル改変や商業への使用は大丈夫です。\n\nVRchat、改変、動画、同人などに使って下さい。","url":"https://booth.pm/ja/items/1219646","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/8f9f026a-3963-4972-9b28-0d458c4521ab/i/1219646/d97541c1-e53b-415a-b2ba-1e24f26fbb3d_base_resized.jpg"}
+    {"@context":"https://schema.org","@type":"Product","name":"DT_Tank_Machinegun (FBXファイル) △8432","description":"この商品はDT車載機関銃をモデリングしたものです。\nポリゴン数削減のため、細かい部分は再現されていません。ご了承ください。\n\n2021年12月 追記\n商品画像の変更、ボーン付属のFBXを追加しました。\n\n△8432ポリゴン、テクスチャ同梱。\n\n●内容物\n\n・fbxファイル『DTTankGun_ver0.1.fbx』\n・fbxファイル『DTtankGun_Bone_ver01.fbx』\n・テクスチャ三枚（Albedo、ノーマルマップ、スペキュラー）\n・利用規約\n\nまたこれらのデータはzip形式で圧縮してあります。\n\n　＜利用規約＞ \n・本モデルを使用したことによって生じるいかなる損害に対して等方は一切責任を負いません。 また、条件についての内容は予告なく変更する場合があります。 \n\n・非改変での再配布、再販売、自作発言等は禁止です。 テクスチャ改変、モデル改変や商業への使用は大丈夫です。\n\nVRchat、改変、動画、同人などに使って下さい。\n\n\n2021/12/24 ver1.1に変更","url":"https://booth.pm/ja/items/1219646","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/8f9f026a-3963-4972-9b28-0d458c4521ab/i/1219646/9f6677de-5a18-423b-8352-bdcc5e8dea6e_base_resized.jpg"}
     </script>
     <link rel="shortcut icon" type="image/x-icon" href=
     "https://asset.booth.pm/favicon.ico">
@@ -91,7 +91,7 @@
     <script src=
     "https://asset.booth.pm/assets/968e98f61f1661ce0966.js" defer=
     "defer" nonce=
-    "N0KSTLC4BpR/fyNgq9+PIETds6EOgRNnQowJb3MUW2k="></script>
+    "8+xm/fiVEyN/L0+NG2O2nccCuDv/SOXTnKxh+BGMgt0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -204,9 +204,9 @@
                                       <a class=
                                       "btn add-cart full-length"
                                       title=
-                                      "DT_Tank_machinegun_ver01.zip"
+                                      "DT_Tank_machinegun_ver1.1.zip"
                                       href=
-                                      "https://booth.pm/downloadables/494663">
+                                      "https://booth.pm/downloadables/2235226">
                                       <div class="u-d-block">
                                         <span class=
                                         "cmd-label">無料ダウンロード</span>
@@ -215,13 +215,13 @@
                                       "u-d-flex u-flex-wrap u-justify-content-center u-tpg-caption1 u-fw-normal">
                                         <div class=
                                         "u-text-ellipsis u-max-w-50">
-                                          DT_Tank_machinegun_ver01
+                                          DT_Tank_machinegun_ver1.1
                                         </div>
                                         <div>
                                           .zip
                                         </div>
                                         <div>
-                                          &nbsp;(5.9 MB)
+                                          &nbsp;(6.15 MB)
                                         </div>
                                       </div></a>
                                     </div>
@@ -262,9 +262,9 @@
                             "DT_Tank_Machinegun (FBXファイル) △8432"
                             class="market-item-detail-item-image"
                             data-origin=
-                            "https://booth.pximg.net/8f9f026a-3963-4972-9b28-0d458c4521ab/i/1219646/d97541c1-e53b-415a-b2ba-1e24f26fbb3d.png"
+                            "https://booth.pximg.net/8f9f026a-3963-4972-9b28-0d458c4521ab/i/1219646/9f6677de-5a18-423b-8352-bdcc5e8dea6e.png"
                             src=
-                            "https://booth.pximg.net/8f9f026a-3963-4972-9b28-0d458c4521ab/i/1219646/d97541c1-e53b-415a-b2ba-1e24f26fbb3d_base_resized.jpg">
+                            "https://booth.pximg.net/8f9f026a-3963-4972-9b28-0d458c4521ab/i/1219646/9f6677de-5a18-423b-8352-bdcc5e8dea6e_base_resized.jpg">
                           </div>
                         </div>
                         <div>
@@ -274,9 +274,9 @@
                             "DT_Tank_Machinegun (FBXファイル) △8432"
                             class="market-item-detail-item-image"
                             data-lazy=
-                            "https://booth.pximg.net/8f9f026a-3963-4972-9b28-0d458c4521ab/i/1219646/1d410b38-3528-45ec-b7af-304a11f06242_base_resized.jpg"
+                            "https://booth.pximg.net/8f9f026a-3963-4972-9b28-0d458c4521ab/i/1219646/d22f9468-51f6-4d85-9cb9-786c81c6ff12_base_resized.jpg"
                             data-origin=
-                            "https://booth.pximg.net/8f9f026a-3963-4972-9b28-0d458c4521ab/i/1219646/1d410b38-3528-45ec-b7af-304a11f06242.png">
+                            "https://booth.pximg.net/8f9f026a-3963-4972-9b28-0d458c4521ab/i/1219646/d22f9468-51f6-4d85-9cb9-786c81c6ff12.png">
                           </div>
                         </div>
                         <div>
@@ -286,21 +286,9 @@
                             "DT_Tank_Machinegun (FBXファイル) △8432"
                             class="market-item-detail-item-image"
                             data-lazy=
-                            "https://booth.pximg.net/8f9f026a-3963-4972-9b28-0d458c4521ab/i/1219646/a74bc0ec-2355-4fe0-876e-728e82769897_base_resized.jpg"
+                            "https://booth.pximg.net/8f9f026a-3963-4972-9b28-0d458c4521ab/i/1219646/38e26926-133d-4631-b98e-5f84e5185514_base_resized.jpg"
                             data-origin=
-                            "https://booth.pximg.net/8f9f026a-3963-4972-9b28-0d458c4521ab/i/1219646/a74bc0ec-2355-4fe0-876e-728e82769897.png">
-                          </div>
-                        </div>
-                        <div>
-                          <div class=
-                          "market-item-detail-item-image-wrapper">
-                            <img alt=
-                            "DT_Tank_Machinegun (FBXファイル) △8432"
-                            class="market-item-detail-item-image"
-                            data-lazy=
-                            "https://booth.pximg.net/8f9f026a-3963-4972-9b28-0d458c4521ab/i/1219646/5b6548ce-7d2c-4efa-8339-b68f6e4540a1_base_resized.jpg"
-                            data-origin=
-                            "https://booth.pximg.net/8f9f026a-3963-4972-9b28-0d458c4521ab/i/1219646/5b6548ce-7d2c-4efa-8339-b68f6e4540a1.png">
+                            "https://booth.pximg.net/8f9f026a-3963-4972-9b28-0d458c4521ab/i/1219646/38e26926-133d-4631-b98e-5f84e5185514.png">
                           </div>
                         </div>
                       </div>
@@ -309,19 +297,15 @@
                         <a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/8f9f026a-3963-4972-9b28-0d458c4521ab/i/1219646/d97541c1-e53b-415a-b2ba-1e24f26fbb3d_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/8f9f026a-3963-4972-9b28-0d458c4521ab/i/1219646/9f6677de-5a18-423b-8352-bdcc5e8dea6e_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/8f9f026a-3963-4972-9b28-0d458c4521ab/i/1219646/1d410b38-3528-45ec-b7af-304a11f06242_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/8f9f026a-3963-4972-9b28-0d458c4521ab/i/1219646/d22f9468-51f6-4d85-9cb9-786c81c6ff12_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/8f9f026a-3963-4972-9b28-0d458c4521ab/i/1219646/a74bc0ec-2355-4fe0-876e-728e82769897_base_resized.jpg">
-                        </div></a><a class="pointer">
-                        <div class="slick-thumbnail-border">
-                          <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/8f9f026a-3963-4972-9b28-0d458c4521ab/i/1219646/5b6548ce-7d2c-4efa-8339-b68f6e4540a1_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/8f9f026a-3963-4972-9b28-0d458c4521ab/i/1219646/38e26926-133d-4631-b98e-5f84e5185514_base_resized.jpg">
                         </div></a>
                       </div>
                       <section>
@@ -330,15 +314,18 @@
                           <p class="autolink u-text-wrap">
                             この商品はDT車載機関銃をモデリングしたものです。
                             ポリゴン数削減のため、細かい部分は再現されていません。ご了承ください。
+                            2021年12月 追記 商品画像の変更、ボーン付属のFBXを追加しました。
                             △8432ポリゴン、テクスチャ同梱。 ●内容物
                             ・fbxファイル『DTTankGun_ver0.1.fbx』
-                            ・テクスチャ三枚（Albedo、ノーマルマップ、スペキュラー）
+                            ・fbxファイル『DTtankGun_Bone_ver01.fbx』
+                            ・テクスチャ三枚（Albedo、ノーマルマップ、スペキュラー） ・利用規約
                             またこれらのデータはzip形式で圧縮してあります。 　＜利用規約＞
                             ・本モデルを使用したことによって生じるいかなる損害に対して等方は一切責任を負いません。
                             また、条件についての内容は予告なく変更する場合があります。
                             ・非改変での再配布、再販売、自作発言等は禁止です。
                             テクスチャ改変、モデル改変や商業への使用は大丈夫です。
-                            VRchat、改変、動画、同人などに使って下さい。
+                            VRchat、改変、動画、同人などに使って下さい。 2021/12/24
+                            ver1.1に変更
                           </p>
                         </div>
                       </section>
