--- a/VRChat/55/1131055.html
+++ b/VRChat/55/1131055.html
@@ -69,9 +69,9 @@
     <script src=
     "https://d.line-scdn.net/r/web/social-plugin/js/thirdparty/loader.min.js"
     defer="defer" nonce=
-    "G0J9Y7Jc4wZ6wyS5JqYxSRCYPqf6evM+TEeDGclqIac="></script>
+    "JnnnIkTn8xiTc76aR51PsQcwkSxFgD6yqIbO8vlJpwc="></script>
     <script src="https://asset.booth.pm/twitter.js" defer="defer"
-    nonce="G0J9Y7Jc4wZ6wyS5JqYxSRCYPqf6evM+TEeDGclqIac="></script>
+    nonce="JnnnIkTn8xiTc76aR51PsQcwkSxFgD6yqIbO8vlJpwc="></script>
     <script id="follow_btn" type="text/x-template">
     <div class="following-shop__action-box" v-if="shop"><template v-if="userSignedIn"><a @click="unfollow" class="btn small u-px-sp-600 unfollow-action" v-if="shop.following"><span class="cmd-label">フォロー中</span></a><a @click="follow" class="btn small u-px-sp-600 follow-action" v-else=""><span class="cmd-label">フォロー</span></a></template><template v-else=""><a :href="shop.follow_path" @click="sendAnalyticsEvent(&quot;follow&quot;)" class="btn small u-px-sp-600 follow-action" data-method="post"><span class="cmd-label">フォロー</span></a></template></div>
     </script>
@@ -87,7 +87,7 @@
     <script src=
     "https://asset.booth.pm/assets/f2f088dd9bcf06fc6978.js" defer=
     "defer" nonce=
-    "G0J9Y7Jc4wZ6wyS5JqYxSRCYPqf6evM+TEeDGclqIac="></script>
+    "JnnnIkTn8xiTc76aR51PsQcwkSxFgD6yqIbO8vlJpwc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【U10素体版】ver.6.0【完全QUEST対応版は別ページにあります】","description":"※7500ポリゴン以下の完全クエスト対応版は別ページにてご紹介しています→ https://kindergarten21.booth.pm/items/2406667 ※\n\n----------------------------------------\n※ver.6.0よりPhysBone対応となりました※\n※シェーダーの同梱を廃止しました。unity packageのインポート前に必要なシェーダーを導入してください※\n\n使用しているシェーダーは以下の通りです。\n\n「Crystal Shader」\nhttps://booth.pm/ja/items/1148311\n\n「ユニティちゃんトゥーンシェーダー2.0」\nhttps://unity-chan.com　右上のDATA DOWNLOADから進んだ先。\n\n「MToon」※同梱済み\nhttps://github.com/Santarh/MToon\n----------------------------------------\n\n\n\n常なるこの世を維持する【常世界機構】が管理保有する汎用人型自立稼働システムU10。\n…を人間ボディで遊びたい方向けの素体ver.です。\nU10の顔で人間になりたい方はご利用ください。\n\nリップシンク・フルトラッキング・アイトラッキング対応／約40,000ポリゴン／ユニティちゃんトゥーンシェーダー使用です。\n\nVRchat用にセットアップ済みのモデル／QUEST用シェーダーに対応した1メッシュモデル／VRMモデル／cluster対応VRM／素体／改変用PSDデータ／改変用blenderデータが同梱されています。\n\nVRChat内のワールドにて試着が可能です。\nhttps://www.vrchat.com/home/launch?worldId=wrld_12ca024e-3ae8-4966-bf2f-c0621f622568\u0026instanceId=0\n\nVRM版／cluster対応版の挙動はVRoidHubにて確認できます。\nVRM版→ https://hub.vroid.com/characters/2406757829548781233\ncluster対応版→ https://hub.vroid.com/characters/2335992945231988540","url":"https://booth.pm/ja/items/1131055","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/332cfc35-d465-4aa3-b8f3-1233909528cc/i/1131055/59be520a-54f5-4825-affe-96af28b0f306_base_resized.jpg"}
     </script>
@@ -101,7 +101,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="G0J9Y7Jc4wZ6wyS5JqYxSRCYPqf6evM+TEeDGclqIac="></script>
+    nonce="JnnnIkTn8xiTc76aR51PsQcwkSxFgD6yqIbO8vlJpwc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -234,9 +234,8 @@
                                     <div class="cart-button-wrap">
                                       <a class=
                                       "btn add-cart full-length"
-                                      title=
-                                      "U10H_ver.5.2.3_VRM.zip"
-                                      href="https://booth.pm/downloadables/2550535">
+                                      title="U10H_ver.6.0.zip"
+                                      href="https://booth.pm/downloadables/2557751">
                                       <div class="u-d-block">
                                         <span class=
                                         "cmd-label">無料ダウンロード</span>
@@ -245,34 +244,13 @@
                                       "u-d-flex u-flex-wrap u-justify-content-center u-tpg-caption1 u-fw-normal">
                                         <div class=
                                         "u-text-ellipsis u-max-w-50">
-                                          U10H_ver.5.2.3_VRM
+                                          U10H_ver.6.0
                                         </div>
                                         <div>
                                           .zip
                                         </div>
                                         <div>
-                                          &nbsp;(325 MB)
-                                        </div>
-                                      </div></a><a class=
-                                      "btn add-cart full-length"
-                                      title="U10H_ver.6.0beta.zip"
-                                      href=
-                                      "https://booth.pm/downloadables/2551210">
-                                      <div class="u-d-block">
-                                        <span class=
-                                        "cmd-label">無料ダウンロード</span>
-                                      </div>
-                                      <div class=
-                                      "u-d-flex u-flex-wrap u-justify-content-center u-tpg-caption1 u-fw-normal">
-                                        <div class=
-                                        "u-text-ellipsis u-max-w-50">
-                                          U10H_ver.6.0beta
-                                        </div>
-                                        <div>
-                                          .zip
-                                        </div>
-                                        <div>
-                                          &nbsp;(545 MB)
+                                          &nbsp;(547 MB)
                                         </div>
                                       </div></a>
                                     </div>
@@ -306,7 +284,7 @@
                                       "btn add-cart full-length"
                                       title="U10H_ver.6.0.PSD.zip"
                                       href=
-                                      "https://booth.pm/downloadables/2550533">
+                                      "https://booth.pm/downloadables/2556528">
                                       <div class="u-d-block">
                                         <span class=
                                         "cmd-label">無料ダウンロード</span>
@@ -321,7 +299,7 @@
                                           .zip
                                         </div>
                                         <div>
-                                          &nbsp;(448 MB)
+                                          &nbsp;(442 MB)
                                         </div>
                                       </div></a>
                                     </div>
@@ -728,7 +706,7 @@
             </div>
           </aside>
           <script id="json_modules" type="application/json">
-          {"modules":[{"type":"text","title":"【更新履歴】","content":"//2022.05.30 ver.6.0beta\nVRCの更新に合わせた内容にアップデート。\n全U10ちゃんの規格を共通化したので着せ替えや装備の付け替えがやりやすくなりました！\n\n//2020.04.18　ver.5.0\n諸々大幅に更新しました！　\n\n//2019.05.02：ver.1.0頒布開始\n//2018.12.16：旧素体ver.頒布開始"},{"type":"text","title":"【免責事項】","content":"当データを使用して発生したすべての問題や損害について、製作者(火事屋)は一切責任を負いません。"},{"type":"text","title":"【利用規約】","content":"本利用規約の内容は変更される場合があり、その際は最新のものが適応されます。\n最新の規約についてはBOOTHをご確認ください。\n火事屋製モデルについてのライセンスのページ→　https://kindergarten21.booth.pm/items/1236486\n\n規約はあくまで困ったことが起こらないようにするためのものですので、\n「こういう使い方がしたい！」等ありましたらお気軽にお問い合わせください。\nよほどの内容でなければお断りすることはないと思います。\n\nこのアバターは無料ですので、無料版の規約が適応されます。\n\n\n【無料モデル利用規約の要約】\n・再配布：許可\n・法人利用：要相談\n・個人による営利目的での利用：許可\n・モデルデータの改変：許可\n・メッシュデータの流用：個人利用および専用アイテム販売用のみ可能（販売の場合要クレジット）\n・R18及びR18G：許可\n・アバターペデスタル/アバタークローンでの利用：許可\n・中傷、政治目的、宗教目的の使用：禁止\n・NFTの発行：禁止\n\n・Redistributable\n・Corporate use: Disallow\n・Use by individuals for commercial purposes: Allow\n・Modification of model datan: Allow\n・Using mesh data: \n      Private Use: Allow\n      Use by individuals for commercial purposes: This is only possible if you sell it as a limited edition item for this avatar.\n・R18/R18G: Allow\n・Avatar Pedestal/Avatar Clone : Allow\n・Use for defamation, Use for political purposes, Use for religious purposes: Disallow\n・NFT: Disallow"},{"type":"text","title":"【製作者】","content":"火事屋（かじや）\n\nTwitter：\nhttps://twitter.com/kaziya21_VRC\nhttps://twitter.com/kaziya21\nハッシュタグ「#U10ちゃん」で更新情報等見られます。\n\nBOOTH：https://kindergarten21.booth.pm\nVRChat：kaziya21"},{"type":"text","title":"【なんで無料なの？】","content":"私が初めて作った人型のモデルだからです！ 改修を重ねて今はマトモなのですが、最初は結構ひどかった…。 初期の頃から可愛がってくださっている方、本当にありがとうございます。"},{"type":"text","title":"【利用させていただいた外部のツールなど】","content":"「Crystal Shader」\nhttps://booth.pm/ja/items/1148311\n\n「ユニティちゃんトゥーンシェーダー2.0」\nhttps://unity-chan.com　右上のDATA DOWNLOADから進んだ先。\n\n「MToon」※同梱済み\nhttps://github.com/Santarh/MToon"},{"type":"media","content":"\u003ciframe width=\"500\" height=\"500\" src=\"https://hub.vroid.com/characters/2406757829548781233/models/8720634042695652583/embed\" frameborder=\"0\" allowfullscreen=\"\" sandbox=\"allow-scripts allow-same-origin allow-popups allow-presentation\" allow=\"xr-spatial-tracking\"\u003e\u003c/iframe\u003e"},{"type":"media","content":"\u003ciframe width=\"500\" height=\"500\" src=\"https://hub.vroid.com/characters/2406757829548781233/models/4039521032911859133/embed\" frameborder=\"0\" allowfullscreen=\"\" sandbox=\"allow-scripts allow-same-origin allow-popups allow-presentation\" allow=\"xr-spatial-tracking\"\u003e\u003c/iframe\u003e"},{"type":"media","content":"\u003ciframe width=\"500\" height=\"500\" src=\"https://hub.vroid.com/characters/3279368613531456049/models/6314452776546893426/embed\" frameborder=\"0\" allowfullscreen=\"\" sandbox=\"allow-scripts allow-same-origin allow-popups allow-presentation\" allow=\"xr-spatial-tracking\"\u003e\u003c/iframe\u003e"}]}
+          {"modules":[{"type":"text","title":"【更新履歴】","content":"//2022.05.30 ver.6.0beta\nVRCの更新に合わせた内容にアップデート。\n全U10ちゃんの規格を共通化したので着せ替えや装備の付け替えがやりやすくなりました！\nほか、ジャージと部屋着を追加、おまけの別ファイルだったセーターとバスタオルが同梱になりました。\n\n//2020.04.18　ver.5.0\n諸々大幅に更新しました！　\n\n//2019.05.02：ver.1.0頒布開始\n//2018.12.16：旧素体ver.頒布開始"},{"type":"text","title":"【免責事項】","content":"当データを使用して発生したすべての問題や損害について、製作者(火事屋)は一切責任を負いません。"},{"type":"text","title":"【利用規約】","content":"本利用規約の内容は変更される場合があり、その際は最新のものが適応されます。\n最新の規約についてはBOOTHをご確認ください。\n火事屋製モデルについてのライセンスのページ→　https://kindergarten21.booth.pm/items/1236486\n\n規約はあくまで困ったことが起こらないようにするためのものですので、\n「こういう使い方がしたい！」等ありましたらお気軽にお問い合わせください。\nよほどの内容でなければお断りすることはないと思います。\n\nこのアバターは無料ですので、無料版の規約が適応されます。\n\n\n【無料モデル利用規約の要約】\n・再配布：許可\n・法人利用：要相談\n・個人による営利目的での利用：許可\n・モデルデータの改変：許可\n・メッシュデータの流用：個人利用および専用アイテム販売用のみ可能（販売の場合要クレジット）\n・R18及びR18G：許可\n・アバターペデスタル/アバタークローンでの利用：許可\n・中傷、政治目的、宗教目的の使用：禁止\n・NFTの発行：禁止\n\n・Redistributable\n・Corporate use: Disallow\n・Use by individuals for commercial purposes: Allow\n・Modification of model datan: Allow\n・Using mesh data: \n      Private Use: Allow\n      Use by individuals for commercial purposes: This is only possible if you sell it as a limited edition item for this avatar.\n・R18/R18G: Allow\n・Avatar Pedestal/Avatar Clone : Allow\n・Use for defamation, Use for political purposes, Use for religious purposes: Disallow\n・NFT: Disallow"},{"type":"text","title":"【製作者】","content":"火事屋（かじや）\n\nTwitter：\nhttps://twitter.com/kaziya21_VRC\nhttps://twitter.com/kaziya21\nハッシュタグ「#U10ちゃん」で更新情報等見られます。\n\nBOOTH：https://kindergarten21.booth.pm\nVRChat：kaziya21"},{"type":"text","title":"【なんで無料なの？】","content":"私が初めて作った人型のモデルだからです！ 改修を重ねて今はマトモなのですが、最初は結構ひどかった…。 初期の頃から可愛がってくださっている方、本当にありがとうございます。"},{"type":"text","title":"【利用させていただいた外部のツールなど】","content":"「Crystal Shader」\nhttps://booth.pm/ja/items/1148311\n\n「ユニティちゃんトゥーンシェーダー2.0」\nhttps://unity-chan.com　右上のDATA DOWNLOADから進んだ先。\n\n「MToon」※同梱済み\nhttps://github.com/Santarh/MToon"},{"type":"media","content":"\u003ciframe width=\"500\" height=\"500\" src=\"https://hub.vroid.com/characters/2406757829548781233/models/8720634042695652583/embed\" frameborder=\"0\" allowfullscreen=\"\" sandbox=\"allow-scripts allow-same-origin allow-popups allow-presentation\" allow=\"xr-spatial-tracking\"\u003e\u003c/iframe\u003e"},{"type":"media","content":"\u003ciframe width=\"500\" height=\"500\" src=\"https://hub.vroid.com/characters/2406757829548781233/models/4039521032911859133/embed\" frameborder=\"0\" allowfullscreen=\"\" sandbox=\"allow-scripts allow-same-origin allow-popups allow-presentation\" allow=\"xr-spatial-tracking\"\u003e\u003c/iframe\u003e"},{"type":"media","content":"\u003ciframe width=\"500\" height=\"500\" src=\"https://hub.vroid.com/characters/3279368613531456049/models/6314452776546893426/embed\" frameborder=\"0\" allowfullscreen=\"\" sandbox=\"allow-scripts allow-same-origin allow-popups allow-presentation\" allow=\"xr-spatial-tracking\"\u003e\u003c/iframe\u003e"}]}
           </script>
         </div>
       </main>
